// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test UserPoints component renders correctly with loading prop 1`] = `
[
  <Text
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "Avenir",
        },
        {
          "color": "#9B9898",
          "fontSize": 14,
          "fontWeight": "800",
          "lineHeight": 19.12,
          "marginVertical": 20,
        },
      ]
    }
  >
    TUS PUNTOS
  </Text>,
  <View
    style={
      [
        {
          "backgroundColor": "#334FFA",
          "borderRadius": 20,
          "height": 143,
          "marginHorizontal": 34,
          "paddingHorizontal": 19,
          "paddingVertical": 21,
        },
        {
          "elevation": 19,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.5,
          "shadowRadius": 4,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator />
    </View>
  </View>,
]
`;

exports[`Test UserPoints component renders correctly with totalPoints prop 1`] = `
[
  <Text
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "Avenir",
        },
        {
          "color": "#9B9898",
          "fontSize": 14,
          "fontWeight": "800",
          "lineHeight": 19.12,
          "marginVertical": 20,
        },
      ]
    }
  >
    TUS PUNTOS
  </Text>,
  <View
    style={
      [
        {
          "backgroundColor": "#334FFA",
          "borderRadius": 20,
          "height": 143,
          "marginHorizontal": 34,
          "paddingHorizontal": 19,
          "paddingVertical": 21,
        },
        {
          "elevation": 19,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.5,
          "shadowRadius": 4,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#000000",
            "fontFamily": "Avenir",
          },
          {
            "color": "#FFFFFF",
            "fontSize": 16,
            "fontWeight": "800",
            "lineHeight": 21.86,
          },
        ]
      }
    >
      Enero
    </Text>
    <Text
      style={
        [
          {
            "color": "#000000",
            "fontFamily": "Avenir",
          },
          {
            "color": "#FFFFFF",
            "fontSize": 32,
            "fontWeight": "800",
            "lineHeight": 43.71,
            "marginTop": 7,
            "textAlign": "center",
          },
        ]
      }
    >
      10,000 pts
    </Text>
  </View>,
]
`;
